--- a/Content_based_recommendation_system.ipynb
+++ b/Content_based_recommendation_system.ipynb
@@ -144,6 +144,109 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>type</th>\n",
+       "      <th>bag_of_words</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12289</th>\n",
+       "      <td>9316</td>\n",
+       "      <td>Toushindai My Lover: Minami tai Mecha-Minami</td>\n",
+       "      <td>hentai</td>\n",
+       "      <td>OVA</td>\n",
+       "      <td>hentai, OVA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12290</th>\n",
+       "      <td>5543</td>\n",
+       "      <td>Under World</td>\n",
+       "      <td>hentai</td>\n",
+       "      <td>OVA</td>\n",
+       "      <td>hentai, OVA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12291</th>\n",
+       "      <td>5621</td>\n",
+       "      <td>Violence Gekiga David no Hoshi</td>\n",
+       "      <td>hentai</td>\n",
+       "      <td>OVA</td>\n",
+       "      <td>hentai, OVA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12292</th>\n",
+       "      <td>6133</td>\n",
+       "      <td>Violence Gekiga Shin David no Hoshi: Inma Dens...</td>\n",
+       "      <td>hentai</td>\n",
+       "      <td>OVA</td>\n",
+       "      <td>hentai, OVA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12293</th>\n",
+       "      <td>26081</td>\n",
+       "      <td>Yasuji no Pornorama: Yacchimae!!</td>\n",
+       "      <td>hentai</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>hentai, Movie</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       anime_id                                               name   genre  \\\n",
+       "12289      9316       Toushindai My Lover: Minami tai Mecha-Minami  hentai   \n",
+       "12290      5543                                        Under World  hentai   \n",
+       "12291      5621                     Violence Gekiga David no Hoshi  hentai   \n",
+       "12292      6133  Violence Gekiga Shin David no Hoshi: Inma Dens...  hentai   \n",
+       "12293     26081                   Yasuji no Pornorama: Yacchimae!!  hentai   \n",
+       "\n",
+       "        type   bag_of_words  \n",
+       "12289    OVA    hentai, OVA  \n",
+       "12290    OVA    hentai, OVA  \n",
+       "12291    OVA    hentai, OVA  \n",
+       "12292    OVA    hentai, OVA  \n",
+       "12293  Movie  hentai, Movie  "
+      ]
+     },
+     "execution_count": 297,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1833,6 +1936,120 @@
    ],
    "source": [
     "evaluation_metrics(cosine_sim_user, data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.read_csv(\"D:/Courses/big data/project/Anime/rating.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>7.813737e+06</td>\n",
+       "      <td>7.813737e+06</td>\n",
+       "      <td>7.813737e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.672796e+04</td>\n",
+       "      <td>8.909072e+03</td>\n",
+       "      <td>6.144030e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.099795e+04</td>\n",
+       "      <td>8.883950e+03</td>\n",
+       "      <td>3.727800e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>-1.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.897400e+04</td>\n",
+       "      <td>1.240000e+03</td>\n",
+       "      <td>6.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.679100e+04</td>\n",
+       "      <td>6.213000e+03</td>\n",
+       "      <td>7.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5.475700e+04</td>\n",
+       "      <td>1.409300e+04</td>\n",
+       "      <td>9.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.351600e+04</td>\n",
+       "      <td>3.451900e+04</td>\n",
+       "      <td>1.000000e+01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            user_id      anime_id        rating\n",
+       "count  7.813737e+06  7.813737e+06  7.813737e+06\n",
+       "mean   3.672796e+04  8.909072e+03  6.144030e+00\n",
+       "std    2.099795e+04  8.883950e+03  3.727800e+00\n",
+       "min    1.000000e+00  1.000000e+00 -1.000000e+00\n",
+       "25%    1.897400e+04  1.240000e+03  6.000000e+00\n",
+       "50%    3.679100e+04  6.213000e+03  7.000000e+00\n",
+       "75%    5.475700e+04  1.409300e+04  9.000000e+00\n",
+       "max    7.351600e+04  3.451900e+04  1.000000e+01"
+      ]
+     },
+     "execution_count": 300,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.describe()"
    ]
   }
  ],
