With updated result

--- a/User_based_CF_colab.ipynb
+++ b/User_based_CF_colab.ipynb
@@ -23,6 +23,7 @@
       "name": "User_based_CF_colab.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "machine_shape": "hm",
       "include_colab_link": true
     }
   },
@@ -157,17 +158,17 @@
       "metadata": {
         "id": "4GCd-Vl2Yovl",
         "colab_type": "code",
+        "outputId": "7907c075-8bcd-4ed7-a8b3-f1ccc60dd699",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
-        },
-        "outputId": "0172c3c0-e9bb-42ec-f534-2102ed72b0ae"
+        }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,28 +188,26 @@
       "metadata": {
         "id": "rB7F6PbGZEUM",
         "colab_type": "code",
+        "outputId": "4676c0ff-a7e1-4553-a85b-ebb216cef60a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 151
-        },
-        "outputId": "9453e822-4b2f-484a-d5d4-8bbe2f067cf1"
+          "height": 118
+        }
       },
       "source": [
         "!ls \"/content/drive/My Drive/Colab Notebooks\""
       ],
-      "execution_count": 21,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            " anime.csv\n",
-            " Bike_Sharing.ipynb\n",
-            " Classifier_Interpretability_Project.ipynb\n",
-            "'Copy of Part1_TensorFlow.ipynb'\n",
-            "'Copy of Part2_Music_Generation.ipynb'\n",
-            " rating.csv\n",
-            " Untitled0.ipynb\n",
-            " User_based_CF.ipynb\n"
+            " anime.csv\t\t\t\t\t   rating.csv\n",
+            " Bike_Sharing.ipynb\t\t\t\t   test_data_animes.csv\n",
+            " Classifier_Interpretability_Project.ipynb\t   training_data.csv\n",
+            " Content_based_recommendation_system_Colab.ipynb   Untitled0.ipynb\n",
+            "'Copy of Part1_TensorFlow.ipynb'\t\t   Untitled1.ipynb\n",
+            "'Copy of Part2_Music_Generation.ipynb'\t\t   User_based_CF_colab.ipynb\n"
           ],
           "name": "stdout"
         }
@@ -253,6 +252,19 @@
       },
       "source": [
         "data3 = data2.collect()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w5ZvnuSMht7f",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "data3"
       ],
       "execution_count": 0,
       "outputs": []
@@ -329,26 +341,29 @@
       "metadata": {
         "id": "I4HbXto9Tg85",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "210dbc55-25a9-4940-b61e-08adb1793022"
+        "outputId": "d8d3e082-c7c0-438d-f5ff-da38eafb7397",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "import gc\n",
         "gc.collect()"
       ],
-      "execution_count": 0,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "80"
+              "0"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 1
+          "execution_count": 21
         }
       ]
     },
@@ -445,9 +460,9 @@
       },
       "source": [
         "# Creating Test data of randomly selecting 50 users\n",
-        "test= int(0.05 * len(all_users))\n",
+        "test= int(0.20 * len(all_users))\n",
         "test_data_user = []\n",
-        "for _ in range(50):\n",
+        "for _ in range(1000):\n",
         "    random_user = random.randint(1, len(all_users))\n",
         "    if all_users[random_user] not in test_data_user:\n",
         "        test_data_user.append(all_users[random_user])"
@@ -458,13 +473,38 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "f-2yS7CshNSo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5429192e-f1a2-495d-86a9-c2b4cb8c7e78"
+      },
+      "source": [
+        "print(len(test_data_user))"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "995\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "kxbgWhrZTg9K",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "# Creating test data of ramdomly selecting 30% of the total animes list\n",
-        "test_animes = int(0.3 * len(all_animes))\n",
+        "test_animes = int(0.2 * len(all_animes))\n",
         "test_data_animes = []\n",
         "for _ in range(test_animes):\n",
         "    random_anime = random.randint(1, len(all_animes))\n",
@@ -509,6 +549,20 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Rgu3CMbTh1Hr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "list_to_df = pd.DataFrame(test_data_user, columns =['user_id'])\n",
+        "list_to_df.to_csv (r'/content/drive/My Drive/Colab Notebooks/test_data_user.csv', index = False, header=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "22nE7fb8Tg9S",
         "colab_type": "code",
         "colab": {}
@@ -516,9 +570,12 @@
       "source": [
         "def start():\n",
         "    predicted = {}\n",
+        "    counter = 0\n",
         "    for user in test_data_user:\n",
         "        predicted[user] = recommend(training_data, user)\n",
-        "        print(user)\n",
+        "        counter += 1\n",
+        "        if counter%100 ==0:\n",
+        "          print(counter)\n",
         "    return predicted"
       ],
       "execution_count": 0,
@@ -563,30 +620,13 @@
       "metadata": {
         "id": "48bIxxqpTg9Y",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "14bfa088-2790-4540-aef3-9dd4547f77c7"
+        "colab": {}
       },
       "source": [
         "RMSE(utility, predicted1)"
       ],
-      "execution_count": 65,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2.0913927814953595"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 65
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -631,16 +671,16 @@
       "metadata": {
         "id": "FllfdC11xsbi",
         "colab_type": "code",
+        "outputId": "d31194b2-1b3c-4f7b-aa04-e55b5c3ce6b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7b4558fd-0755-4641-aa9e-1339c5577ade"
+        }
       },
       "source": [
         "global_avg"
       ],
-      "execution_count": 27,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -652,7 +692,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 41
         }
       ]
     },
@@ -724,23 +764,13 @@
       "source": [
         "def start2():\n",
         "    predicted = {}\n",
+        "    counter = 0\n",
         "    for user in test_data_user:\n",
         "        predicted[user] = recommend_with_regularization(training_data, user)\n",
-        "        print(user)\n",
+        "        counter += 1\n",
+        "        if counter%50 ==0:\n",
+        "            print(counter)\n",
         "    return predicted"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Gml1p5KW1FBs",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "recommend_with_regularization(training_data, 3)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -750,10 +780,99 @@
       "metadata": {
         "id": "STNGR_TEkout",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 403
+        },
+        "outputId": "f0c2475b-bfc5-47ad-b4ea-5eaa2feb5b52"
       },
       "source": [
         "predicted = start2()"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/numpy/core/fromnumeric.py:3335: RuntimeWarning: Mean of empty slice.\n",
+            "  out=out, **kwargs)\n",
+            "/usr/local/lib/python3.6/dist-packages/numpy/core/_methods.py:161: RuntimeWarning: invalid value encountered in double_scalars\n",
+            "  ret = ret.dtype.type(ret / rcount)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "50\n",
+            "100\n",
+            "150\n",
+            "200\n",
+            "250\n",
+            "300\n",
+            "350\n",
+            "400\n",
+            "450\n",
+            "500\n",
+            "550\n",
+            "600\n",
+            "650\n",
+            "700\n",
+            "750\n",
+            "800\n",
+            "850\n",
+            "900\n",
+            "950\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qlJ70y3jmJjI",
+        "colab_type": "code",
+        "outputId": "a209bc44-bebb-4b37-fbb1-12422a38ef87",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "RMSE(utility, predicted)"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8543611147643203"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PlyxJ5xV9I_G",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Saving the predictions\n",
+        "import pickle\n",
+        "file_Name = \"/content/drive/My Drive/Colab Notebooks/testfile2\"\n",
+        "\n",
+        "with open(file_Name, 'wb') as handle:\n",
+        "    pickle.dump(predicted, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -761,30 +880,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qlJ70y3jmJjI",
+        "id": "-r6eE_l4AD6A",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "5783a5bb-b75d-43c1-fb80-a1cded170f96"
+        "outputId": "c3fb3223-b3f3-427f-90ce-397976149876"
       },
       "source": [
-        "RMSE(utility, predicted)"
+        "with open(file_Name, 'rb') as handle:\n",
+        "    b = pickle.load(handle)\n",
+        "\n",
+        "predicted == b\n"
       ],
-      "execution_count": 83,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1.5373710265944023"
+              "True"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 83
+          "execution_count": 70
         }
       ]
     },
@@ -793,25 +915,13 @@
       "metadata": {
         "id": "yngwgh9BTg9f",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "outputId": "e9ba2ad1-b80f-4225-e3cd-5174242b17ee"
+        "colab": {}
       },
       "source": [
         "print(utility[51133])"
       ],
-      "execution_count": 68,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "{59: 10, 68: 10, 93: 10, 94: 10, 177: 10, 210: 9, 232: 10, 242: 9, 251: 9, 371: 10, 372: 8, 431: 10, 455: 9, 476: 10, 486: 7, 907: 8, 969: 10, 1535: 10, 1575: 10, 1579: 10, 1698: 10, 2116: 10, 2251: 10, 2904: 10, 2952: 10, 3392: 10, 3457: 10, 3613: 9, 4477: 10, 4752: 10, 5300: 10, 5678: 10, 7311: 7, 8888: 8, 9253: 10, 9919: 7, 10162: 8, 10379: 10, 11111: 7, 11665: 9, 12413: 9, 16498: 10, 19815: 8, 20507: 9}\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -863,16 +973,16 @@
       "metadata": {
         "id": "YWuNdb5ATg9s",
         "colab_type": "code",
+        "outputId": "856d8084-6553-49a0-ddea-1512c6c3173f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "20359eb3-cfb1-4a41-812b-805fe45418ce"
+        }
       },
       "source": [
         "recommend_animes(3)"
       ],
-      "execution_count": 77,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -976,16 +1086,16 @@
       "metadata": {
         "id": "De6jH1yZ0TiL",
         "colab_type": "code",
+        "outputId": "088178bb-6574-409f-be62-d8feb0017c2a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "07e547da-7198-418b-97a7-412de3ca2a75"
+        }
       },
       "source": [
         "recommend_animes_regularized(3)"
       ],
-      "execution_count": 79,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -1064,19 +1174,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gxkON8jKTg9u",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
