Commit with final results

--- a/User_based_CF_colab.ipynb
+++ b/User_based_CF_colab.ipynb
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "4GCd-Vl2Yovl",
         "colab_type": "code",
-        "outputId": "7907c075-8bcd-4ed7-a8b3-f1ccc60dd699",
+        "outputId": "b4a06eec-1ed2-40ab-c267-257718b0d7ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
@@ -168,7 +168,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,26 +188,28 @@
       "metadata": {
         "id": "rB7F6PbGZEUM",
         "colab_type": "code",
-        "outputId": "4676c0ff-a7e1-4553-a85b-ebb216cef60a",
+        "outputId": "aac05bcb-7241-4835-ad8f-7bb8f7f5510b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 118
+          "height": 151
         }
       },
       "source": [
         "!ls \"/content/drive/My Drive/Colab Notebooks\""
       ],
-      "execution_count": 12,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             " anime.csv\t\t\t\t\t   rating.csv\n",
             " Bike_Sharing.ipynb\t\t\t\t   test_data_animes.csv\n",
-            " Classifier_Interpretability_Project.ipynb\t   training_data.csv\n",
-            " Content_based_recommendation_system_Colab.ipynb   Untitled0.ipynb\n",
-            "'Copy of Part1_TensorFlow.ipynb'\t\t   Untitled1.ipynb\n",
-            "'Copy of Part2_Music_Generation.ipynb'\t\t   User_based_CF_colab.ipynb\n"
+            " Classifier_Interpretability_Project.ipynb\t   test_data_user.csv\n",
+            " Content_based_recommendation_system_Colab.ipynb   testfile2\n",
+            "'Copy of Part1_TensorFlow.ipynb'\t\t   training_data.csv\n",
+            "'Copy of Part2_Music_Generation.ipynb'\t\t   Untitled0.ipynb\n",
+            " predicted\t\t\t\t\t   Untitled1.ipynb\n",
+            " predicted1\t\t\t\t\t   User_based_CF_colab.ipynb\n"
           ],
           "name": "stdout"
         }
@@ -259,19 +261,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "w5ZvnuSMht7f",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "data3"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "zhS_4tl5Tg8V",
         "colab_type": "code",
         "colab": {}
@@ -300,19 +289,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EE_3QKf-Tg8c",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "utility"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "0Ij9z_PyTg8w",
         "colab_type": "code",
         "colab": {}
@@ -322,50 +298,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-rHFTy29Tg81",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "del data3"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "I4HbXto9Tg85",
-        "colab_type": "code",
-        "outputId": "d8d3e082-c7c0-438d-f5ff-da38eafb7397",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "import gc\n",
-        "gc.collect()"
-      ],
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 21
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -459,7 +391,7 @@
         "colab": {}
       },
       "source": [
-        "# Creating Test data of randomly selecting 50 users\n",
+        "# Creating Test data of randomly selecting 1000 users\n",
         "test= int(0.20 * len(all_users))\n",
         "test_data_user = []\n",
         "for _ in range(1000):\n",
@@ -473,23 +405,40 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "OYJjDrMBXYnN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# loading the same test data\n",
+        "test_data_users = pd.read_csv(\"/content/drive/My Drive/Colab Notebooks/test_data_user.csv\")\n",
+        "test_data_animes = pd.read_csv(\"/content/drive/My Drive/Colab Notebooks/test_data_animes.csv\")\n",
+        "test_data_user = test_data_users[\"user_id\"].to_list()\n",
+        "test_data_animes = test_data_animes['test_animes'].to_list()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "f-2yS7CshNSo",
         "colab_type": "code",
+        "outputId": "3b3a7b93-93c9-4c63-8b74-4fd22fe369e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5429192e-f1a2-495d-86a9-c2b4cb8c7e78"
+        }
       },
       "source": [
-        "print(len(test_data_user))"
+        "print(len(test_data_animes))"
       ],
       "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "995\n"
+            "3304\n"
           ],
           "name": "stdout"
         }
@@ -554,8 +503,9 @@
         "colab": {}
       },
       "source": [
-        "list_to_df = pd.DataFrame(test_data_user, columns =['user_id'])\n",
-        "list_to_df.to_csv (r'/content/drive/My Drive/Colab Notebooks/test_data_user.csv', index = False, header=True)"
+        "#Saving the test data of 1000 users\n",
+        "#list_to_df = pd.DataFrame(test_data_user, columns =['user_id'])\n",
+        "#list_to_df.to_csv (r'/content/drive/My Drive/Colab Notebooks/test_data_user.csv', index = False, header=True)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -574,7 +524,7 @@
         "    for user in test_data_user:\n",
         "        predicted[user] = recommend(training_data, user)\n",
         "        counter += 1\n",
-        "        if counter%100 ==0:\n",
+        "        if counter%50 ==0:\n",
         "          print(counter)\n",
         "    return predicted"
       ],
@@ -586,13 +536,54 @@
       "metadata": {
         "id": "JSWuEVQATg9U",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 403
+        },
+        "outputId": "1efdc5ac-18a4-4301-aba8-37589c461d06"
       },
       "source": [
+        "\n",
         "predicted1 = start()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/numpy/core/fromnumeric.py:3335: RuntimeWarning: Mean of empty slice.\n",
+            "  out=out, **kwargs)\n",
+            "/usr/local/lib/python3.6/dist-packages/numpy/core/_methods.py:161: RuntimeWarning: invalid value encountered in double_scalars\n",
+            "  ret = ret.dtype.type(ret / rcount)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "50\n",
+            "100\n",
+            "150\n",
+            "200\n",
+            "250\n",
+            "300\n",
+            "350\n",
+            "400\n",
+            "450\n",
+            "500\n",
+            "550\n",
+            "600\n",
+            "650\n",
+            "700\n",
+            "750\n",
+            "800\n",
+            "850\n",
+            "900\n",
+            "950\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -620,13 +611,30 @@
       "metadata": {
         "id": "48bIxxqpTg9Y",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "17650b1d-875a-4a24-b0ce-c76e34ff2074"
       },
       "source": [
         "RMSE(utility, predicted1)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.7525965512669202"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -671,7 +679,7 @@
       "metadata": {
         "id": "FllfdC11xsbi",
         "colab_type": "code",
-        "outputId": "d31194b2-1b3c-4f7b-aa04-e55b5c3ce6b4",
+        "outputId": "6962ded4-0760-40a5-f945-a80fe6f09f9f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -680,7 +688,7 @@
       "source": [
         "global_avg"
       ],
-      "execution_count": 41,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -692,7 +700,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 40
         }
       ]
     },
@@ -780,16 +788,16 @@
       "metadata": {
         "id": "STNGR_TEkout",
         "colab_type": "code",
+        "outputId": "6f8119d2-fee5-4202-f9a3-fbbe9bde7ede",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 403
-        },
-        "outputId": "f0c2475b-bfc5-47ad-b4ea-5eaa2feb5b52"
+        }
       },
       "source": [
         "predicted = start2()"
       ],
-      "execution_count": 56,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -833,7 +841,7 @@
       "metadata": {
         "id": "qlJ70y3jmJjI",
         "colab_type": "code",
-        "outputId": "a209bc44-bebb-4b37-fbb1-12422a38ef87",
+        "outputId": "886efc26-73d3-447d-94ec-702eab3bb76d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -842,19 +850,19 @@
       "source": [
         "RMSE(utility, predicted)"
       ],
-      "execution_count": 57,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.8543611147643203"
+              "1.4800267481453462"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 57
+          "execution_count": 55
         }
       ]
     },
@@ -868,7 +876,7 @@
       "source": [
         "# Saving the predictions\n",
         "import pickle\n",
-        "file_Name = \"/content/drive/My Drive/Colab Notebooks/testfile2\"\n",
+        "file_Name = \"/content/drive/My Drive/Colab Notebooks/predicted\"\n",
         "\n",
         "with open(file_Name, 'wb') as handle:\n",
         "    pickle.dump(predicted, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
@@ -882,69 +890,15 @@
       "metadata": {
         "id": "-r6eE_l4AD6A",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "c3fb3223-b3f3-427f-90ce-397976149876"
+        "colab": {}
       },
       "source": [
+        "#Loading the saved predicted files\n",
+        "file_Name = \"/content/drive/My Drive/Colab Notebooks/testfile2\"\n",
         "with open(file_Name, 'rb') as handle:\n",
-        "    b = pickle.load(handle)\n",
+        "    predicted3 = pickle.load(handle)\n",
         "\n",
-        "predicted == b\n"
-      ],
-      "execution_count": 70,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 70
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yngwgh9BTg9f",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(utility[51133])"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7-BofM5gTg9i",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(predicted[51133])"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "iDedgA_Nzh3q",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(predicted1[51133])"
+        "#predicted == b\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -982,7 +936,7 @@
       "source": [
         "recommend_animes(3)"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1095,7 +1049,7 @@
       "source": [
         "recommend_animes_regularized(3)"
       ],
-      "execution_count": 61,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
